--- a/detoks-engine/src/main/res/layout/token_manage.xml
+++ b/detoks-engine/src/main/res/layout/token_manage.xml
@@ -13,6 +13,12 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_height="match_parent" android:layout_weight="2" android:id="@+id/token_list">
     </androidx.recyclerview.widget.RecyclerView>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.5dp"
+        android:id="@+id/separator"
+        android:visibility="visible"
+        android:background="@android:color/black"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -22,7 +28,11 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:layout_weight="3" android:weightSum="3">
+        android:layout_height="match_parent" android:layout_weight="3" android:weightSum="4">
+        <Button
+            android:text="Delete\n token"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/delete_button" android:layout_weight="1"/>
         <Button
             android:text="Generate\n token"
             android:layout_width="match_parent"
