--- a/offlinemoney/src/main/res/values/colors.xml
+++ b/offlinemoney/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_190">#FF00BE00</color>
+    <color name="green_dark">#FF008100</color>
 </resources>
