--- a/detoks-engine/src/main/res/layout/token_manage.xml
+++ b/detoks-engine/src/main/res/layout/token_manage.xml
@@ -7,34 +7,72 @@
     android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent">
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_height="match_parent" android:layout_weight="2" android:id="@+id/token_list">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
+        <TextView
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:text="Tokens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0.5dp"
+            android:visibility="visible"
+            android:background="@android:color/black"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_height="match_parent" android:id="@+id/token_list">
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
     <View
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
-        android:id="@+id/separator"
         android:visibility="visible"
         android:background="@android:color/black"/>
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_height="match_parent" android:layout_weight="2" android:id="@+id/peer_list">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
+        <TextView
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:text="Peers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/my_peer"/>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0.5dp"
+            android:visibility="visible"
+            android:background="@android:color/black"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_height="match_parent" android:id="@+id/peer_list">
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:layout_weight="3" android:weightSum="4">
+        android:layout_height="match_parent" android:layout_weight="3" android:weightSum="5">
+        <Button
+            android:text="Delete\n all"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/delete_all_button" android:layout_weight="1"/>
         <Button
             android:text="Delete\n token"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/delete_button" android:layout_weight="1"/>
         <Button
-            android:text="Generate\n token"
+            android:text="Gen\n token"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/generate_button" android:layout_weight="1"/>
         <Button
