--- a/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
+++ b/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
@@ -106,7 +106,7 @@
                 android:text="Send"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnRequest" />
+                app:layout_constraintTop_toBottomOf="@id/btnGet" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
