Add show QR code of public key and read results

--- a/detoks/src/main/res/layout/fragment_add_friend.xml
+++ b/detoks/src/main/res/layout/fragment_add_friend.xml
@@ -52,7 +52,7 @@
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button3"
+        android:id="@+id/save_friend"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
