--- a/detoks/src/main/res/layout/item_video.xml
+++ b/detoks/src/main/res/layout/item_video.xml
@@ -30,6 +30,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/peerCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,7 +64,6 @@
             android:id="@+id/like_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="# Likes"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="15sp" />
@@ -97,11 +107,6 @@
             android:shadowRadius="15"
             android:textColor="@android:color/white"
             android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/peerCount"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
     </LinearLayout>
 
