--- a/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
+++ b/offlinemoney/src/main/res/layout/activity_main_offline_money.xml
@@ -108,6 +108,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnGet" />
 
+            <TextView
+                android:id="@+id/txtPublicKey"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Your public key:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnSend" />
+
+            <ImageView
+                android:id="@+id/qrPublicKey"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txtPublicKey" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
