--- a/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
+++ b/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
@@ -10,8 +10,8 @@
         android:label="Transfer"
         tools:layout="@layout/activity_main_offline_money">
         <action
-            android:id="@+id/action_transferFragment_to_sendMoneyFragment"
-            app:destination="@id/sendMoneyFragment"
+            android:id="@+id/action_transferFragment_to_sendAmountFragment"
+            app:destination="@id/sendAmountFragment"
             />
     </fragment>
 
@@ -21,8 +21,23 @@
         android:label="SendMoneyFragment"
         tools:layout="@layout/send_money_fragment">
         <action
-            android:id="@+id/action_sendMoneyFragment_to_tranferFragment"
+            android:id="@+id/action_sendMoneyFragment_to_transferFragment"
             app:destination="@id/transferFragment"
+            />
+    </fragment>
+
+    <fragment
+        android:id="@+id/sendAmountFragment"
+        android:name="nl.tudelft.trustchain.offlinemoney.ui.SendAmountFragment"
+        android:label="SendAmountFragment"
+        tools:layout="@layout/send_amount_fragment">
+        <action
+            android:id="@+id/action_sendAmountFragment_to_transferFragment"
+            app:destination="@id/transferFragment"
+            />
+        <action
+            android:id="@+id/action_sendAmountFragment_to_sendMoneyFragment"
+            app:destination="@id/sendMoneyFragment"
             />
     </fragment>
 </navigation>
