--- a/offlinemoney/src/main/res/layout/send_amount_fragment.xml
+++ b/offlinemoney/src/main/res/layout/send_amount_fragment.xml
@@ -72,6 +72,7 @@
                 app:layout_constraintTop_toBottomOf="@id/txtTransfer" />
 
             <LinearLayout
+                android:id="@+id/buttonLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -90,16 +91,24 @@
                 android:text="Send"
                 android:layout_gravity="center"/>
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnCancel"
-                    style="@style/Button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="16dp"
-                    android:text="Cancel" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCancel"
+                style="@style/Button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_margin="16dp"
+                android:text="Cancel" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtReceiverInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                app:layout_constraintTop_toBottomOf="@id/buttonLayout" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
