Add functionality to switch between fragments using buttons

--- a/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
+++ b/detoks/src/main/res/layout/fragment_transactionfreqency_test.xml
@@ -32,5 +32,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
         android:text="Switch Environment" />
+	  android:onClick="switchEnvirmonments" />
 
 </RelativeLayout>
