--- a/detoks/src/main/res/layout/fragment_exampleoverlay.xml
+++ b/detoks/src/main/res/layout/fragment_exampleoverlay.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:background="#eeebe3"
     >
+    
+    <!-- Add a button in the top right corner -->
+    <Button
+    	  android:id="@+id/Test_button"
+   	  android:layout_width="72dp"
+    	  android:layout_height="38dp"
+   	  android:layout_alignParentEnd="true"
+    	  android:layout_alignParentTop="true"
+    	  android:text="Test" />
 
     <LinearLayout
         android:layout_width="match_parent"
