--- a/detoks/src/main/res/navigation/nav_graph_detoks.xml
+++ b/detoks/src/main/res/navigation/nav_graph_detoks.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
     android:label="DeToks"
-    app:startDestination="@id/exampleOverlayFragment">
+    app:startDestination="@id/TransactionFrequencyTestFragment">
 
     <fragment
         android:id="@+id/detoksFragment"
@@ -21,6 +21,23 @@
         android:id="@+id/exampleOverlayFragment"
         android:name="nl.tudelft.trustchain.detoks.ExampleOverlayFragment"
         android:label="ExampleOverlay">
+
+	  <action
+            android:id="@+id/action_go_to_testEnvironment"
+            app:destination="@id/TransactionFrequencyTestFragment" />
+
     </fragment>
+
+    <fragment
+        android:id="@+id/TransactionFrequencyTestFragment"
+        android:name="nl.tudelft.trustchain.detoks.TransactionFrequencyTestFragment"
+        android:label="TransactionFrequencyTest">
+	  
+	  <action
+            android:id="@+id/action_switch_environment"
+            app:destination="@id/exampleOverlayFragment" />
+
+    </fragment>
+
 
 </navigation>
