--- a/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
+++ b/offlinemoney/src/main/res/navigation/nav_graph_offlinemoney.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/transferFragment"
         android:name="nl.tudelft.trustchain.offlinemoney.ui.TransferFragment"
-        android:label="Transfer"
+        android:label="Offline Money"
         tools:layout="@layout/activity_main_offline_money">
         <action
             android:id="@+id/action_transferFragment_to_sendAmountFragment"
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/sendMoneyFragment"
         android:name="nl.tudelft.trustchain.offlinemoney.ui.SendMoneyFragment"
-        android:label="SendMoneyFragment"
+        android:label="Transfer"
         tools:layout="@layout/send_money_fragment">
         <action
             android:id="@+id/action_sendMoneyFragment_to_transferFragment"
@@ -29,7 +29,7 @@
     <fragment
         android:id="@+id/sendAmountFragment"
         android:name="nl.tudelft.trustchain.offlinemoney.ui.SendAmountFragment"
-        android:label="SendAmountFragment"
+        android:label="Transfer"
         tools:layout="@layout/send_amount_fragment">
         <action
             android:id="@+id/action_sendAmountFragment_to_transferFragment"
