added the wallet interface and create a coin

--- a/detoks/src/main/res/layout/fragment_detoks.xml
+++ b/detoks/src/main/res/layout/fragment_detoks.xml
@@ -9,7 +9,9 @@
         android:id="@+id/viewPagerVideos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+
+    </androidx.viewpager2.widget.ViewPager2>
 
     <Button
         android:id="@+id/button_offline"
@@ -20,5 +22,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/wallet_button"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:text="Wallet"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </FrameLayout>
