--- a/detoks/src/main/res/layout/fragment_test.xml
+++ b/detoks/src/main/res/layout/fragment_test.xml
@@ -3,12 +3,36 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/yourPkTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your PK: " />
+
+    <Button
+        android:id="@+id/findPeersButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Peers" />
+
+    <TextView
+        android:id="@+id/peersList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Peers:" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Send Transaction" />
+
+    <TextView
+        android:id="@+id/targetPeerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Target Peer:" />
+
 
     <Button
         android:id="@+id/debugClearButton"
