--- a/offlinemoney/src/main/res/menu/offlinemoney_menu.xml
+++ b/offlinemoney/src/main/res/menu/offlinemoney_menu.xml
@@ -3,9 +3,9 @@
     <item
         android:id="@+id/transferFragment"
         android:icon="@drawable/ic_baseline_euro_symbol_24"
-        android:title="Transfer" />
+        android:title="@string/transfer" />
     <item
         android:id="@+id/transactionsFragment"
         android:icon="@drawable/ic_baseline_trans_hist_alt_24"
-        android:title="Transaction History" />
+        android:title="@string/transaction_history" />
 </menu>
