--- a/detoks/src/main/res/layout/fragment_profile.xml
+++ b/detoks/src/main/res/layout/fragment_profile.xml
@@ -73,7 +73,11 @@
                 android:textSize="15sp"
                 android:textAlignment="center" />
         </LinearLayout>
-
+        <Button
+            android:id="@+id/upload"
+            android:layout_width="401dp"
+            android:layout_height="wrap_content"
+            android:text="Upload Video" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -96,7 +100,9 @@
                 android:text="Total Number of Likes..."
                 android:textSize="15sp"
                 android:textAlignment="center" />
+
         </LinearLayout>
+
     </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
